--- a/examples/benchmark_jpeg_decode.ipynb
+++ b/examples/benchmark_jpeg_decode.ipynb
@@ -3,15 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:32:45.786276Z",
-     "iopub.status.busy": "2020-11-12T11:32:45.785366Z",
-     "iopub.status.idle": "2020-11-12T11:32:46.479109Z",
-     "shell.execute_reply": "2020-11-12T11:32:46.478301Z",
-     "shell.execute_reply.started": "2020-11-12T11:32:45.786109Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
@@ -31,15 +23,35 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:32:46.481183Z",
-     "iopub.status.busy": "2020-11-12T11:32:46.480397Z",
-     "iopub.status.idle": "2020-11-12T11:32:46.525523Z",
-     "shell.execute_reply": "2020-11-12T11:32:46.524578Z",
-     "shell.execute_reply.started": "2020-11-12T11:32:46.480915Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running performance checks.\n",
+      "\n",
+      "*** libjpeg-turbo status\n",
+      "✔ libjpeg-turbo is on\n",
+      "\n",
+      "*** Pillow-SIMD status\n",
+      "✔ Running Pillow-SIMD 7.0.0.post3\n",
+      "\n",
+      "*** CUDA status\n",
+      "✔ Running the latest CUDA 10.2 with NVIDIA driver 440.33.01\n",
+      "\n",
+      "Refer to https://docs.fast.ai/performance.html to make sense out of these checks and suggestions.\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "!python3 -c \"import fastai.utils; fastai.utils.check_perf()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_count=256\n",
@@ -56,16 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:32:46.658868Z",
-     "iopub.status.busy": "2020-11-12T11:32:46.658025Z",
-     "iopub.status.idle": "2020-11-12T11:32:46.675658Z",
-     "shell.execute_reply": "2020-11-12T11:32:46.674423Z",
-     "shell.execute_reply.started": "2020-11-12T11:32:46.658773Z"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#doing this here so it doesn't effect time\n",
@@ -75,21 +79,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:32:55.125751Z",
-     "iopub.status.busy": "2020-11-12T11:32:55.123150Z",
-     "iopub.status.idle": "2020-11-12T11:34:05.659290Z",
-     "shell.execute_reply": "2020-11-12T11:34:05.657742Z",
-     "shell.execute_reply.started": "2020-11-12T11:32:55.125115Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "705 ms ± 20.2 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "697 ms ± 26.9 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -112,21 +108,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:34:05.663674Z",
-     "iopub.status.busy": "2020-11-12T11:34:05.663241Z",
-     "iopub.status.idle": "2020-11-12T11:34:57.278370Z",
-     "shell.execute_reply": "2020-11-12T11:34:57.277045Z",
-     "shell.execute_reply.started": "2020-11-12T11:34:05.663610Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "516 ms ± 14.4 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "510 ms ± 14.4 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -134,6 +122,7 @@
     "%%timeit -n 1 -r 100\n",
     "for image_bytes in images_bytes:\n",
     "    z=torch.from_numpy(image_bytes)\n",
+    "#     z=z.to(\"cuda:0\")\n",
     "    z=decode_image(z)\n",
     "#     z.to(\"cuda:0\")"
    ]
@@ -148,15 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:34:57.280492Z",
-     "iopub.status.busy": "2020-11-12T11:34:57.280214Z",
-     "iopub.status.idle": "2020-11-12T11:34:58.765517Z",
-     "shell.execute_reply": "2020-11-12T11:34:58.764422Z",
-     "shell.execute_reply.started": "2020-11-12T11:34:57.280456Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_size=256\n",
@@ -166,15 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:34:58.767258Z",
-     "iopub.status.busy": "2020-11-12T11:34:58.766903Z",
-     "iopub.status.idle": "2020-11-12T11:34:58.772908Z",
-     "shell.execute_reply": "2020-11-12T11:34:58.772127Z",
-     "shell.execute_reply.started": "2020-11-12T11:34:58.767220Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batches_of_image_bytes=list(chunked(images_bytes,batch_size))"
@@ -183,21 +156,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-12T11:34:58.775633Z",
-     "iopub.status.busy": "2020-11-12T11:34:58.775285Z",
-     "iopub.status.idle": "2020-11-12T11:35:18.803825Z",
-     "shell.execute_reply": "2020-11-12T11:35:18.802967Z",
-     "shell.execute_reply.started": "2020-11-12T11:34:58.775590Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 ms ± 14.5 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "200 ms ± 14.8 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -207,6 +172,45 @@
     "    dali_decoder.feed(image_bytes)\n",
     "    dali_tensor=dali_decoder.pipe.run()\n",
     "    # dali_tensor is on the GPU!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nvidia DALI (on CPU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size=256\n",
+    "dali_decoder = DaliChecker(batch_size, prefetch=1, device='cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batches_of_image_bytes=list(chunked(images_bytes,batch_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit -n 1 -r 100\n",
+    "for image_bytes in batches_of_image_bytes:\n",
+    "    dali_decoder.feed(image_bytes)\n",
+    "    dali_tensor=dali_decoder.pipe.run()\n",
+    "    # dali_tensor is on the CPU!"
    ]
   },
   {
