--- a/examples/benchmark_jpeg_decode.ipynb
+++ b/examples/benchmark_jpeg_decode.ipynb
@@ -17,7 +17,9 @@
     "from PIL import Image\n",
     "from torchvision import transforms as t\n",
     "from torchvision.io import decode_image, read_image\n",
-    "from more_itertools import chunked"
+    "from more_itertools import chunked\n",
+    "import cv2 as cv\n",
+    "import simplejpeg"
    ]
   },
   {
@@ -49,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Benchmarking Bytes->Tensor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -57,13 +66,6 @@
     "img_count=256\n",
     "files=folder_iterator(\"/mnt/data/dali_test/fine/\",extensions=[\"jpg\",\"jpeg\"],recursive=False)\n",
     "images_bytes=[im for im,path in files][:img_count]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PIL-SIMD"
    ]
   },
   {
@@ -77,32 +79,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PIL-SIMD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "697 ms ± 26.9 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit -n 1 -r 100\n",
-    "# PIL_SIMD\n",
-    "for image_bytes in images_bytes_io:\n",
-    "    z=Image.open(image_bytes)\n",
-    "    z=t.functional.pil_to_tensor(z)\n",
-    "#     z.to(\"cuda:0\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Torchvision"
+    "from PIL.features import check_feature\n",
+    "check_feature(\"libjpeg_turbo\")"
    ]
   },
   {
@@ -114,17 +115,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "510 ms ± 14.4 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "684 ms ± 18.5 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -n 1 -r 100\n",
-    "for image_bytes in images_bytes:\n",
-    "    z=torch.from_numpy(image_bytes)\n",
+    "# PIL_SIMD -> Tensor output\n",
+    "for image_bytes in images_bytes_io:\n",
+    "    z=Image.open(image_bytes)\n",
+    "    z=t.functional.pil_to_tensor(z)\n",
+    "#     z.to(\"cuda:0\")\n",
+    "# Tensor output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "510 ms ± 10.5 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1 -r 100\n",
+    "for img_bytes in images_bytes:\n",
+    "    z=torch.from_numpy(img_bytes)\n",
     "#     z=z.to(\"cuda:0\")\n",
     "    z=decode_image(z)\n",
-    "#     z.to(\"cuda:0\")"
+    "#     z.to(\"cuda:0\")\n",
+    "# Tensor output"
    ]
   },
   {
@@ -136,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 ms ± 14.8 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "193 ms ± 11.3 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -171,7 +203,8 @@
     "for image_bytes in batches_of_image_bytes:\n",
     "    dali_decoder.feed(image_bytes)\n",
     "    dali_tensor=dali_decoder.pipe.run()\n",
-    "    # dali_tensor is on the GPU!"
+    "    # dali_tensor is on the GPU!\n",
+    "    # Tensor output even moved to GPU"
    ]
   },
   {
@@ -183,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,15 +235,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "497 ms ± 37.1 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit -n 1 -r 100\n",
     "for image_bytes in batches_of_image_bytes:\n",
     "    dali_decoder.feed(image_bytes)\n",
     "    dali_tensor=dali_decoder.pipe.run()\n",
     "    # dali_tensor is on the CPU!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OPENCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "844 ms ± 24.7 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1 -r 100\n",
+    "for img_bytes in images_bytes:\n",
+    "    z = cv.imdecode(img_bytes, cv.IMREAD_COLOR)\n",
+    "    # z is decoded image\n",
+    "    z=torch.as_tensor(z)\n",
+    "    # z is Tensor on cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "libjpeg-turbo (ver 2.0.2-62)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "cv2_jpeg_lib = re.search(\n",
+    "    r\".*JPEG:\\W+(?P<jpeg_lib>.*)\", cv.getBuildInformation()\n",
+    ").groupdict()[\"jpeg_lib\"]\n",
+    "print(cv2_jpeg_lib)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SimpleJpeg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "437 ms ± 5.59 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1 -r 100\n",
+    "# simplejpeg\n",
+    "for img_bytes in images_bytes:\n",
+    "    z=simplejpeg.decode_jpeg(img_bytes, fastdct=True, fastupsample=True)\n",
+    "    # z is decoded image\n",
+    "    z=torch.as_tensor(z)\n",
+    "    # z is Tensor on cpu"
    ]
   },
   {
