benchmark add disclaimer

--- a/examples/benchmark_jpeg_decode_extended.ipynb
+++ b/examples/benchmark_jpeg_decode_extended.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "source": [
+    "# Jpeg Decoding Benchmark\n",
+    "The purpose of this notebook isn't to come to a conclusion about which library is faster. Since little setup differences in versions can make differences and notebooks themselves are not a contained environment. aka **your milage may vary**.\n",
+    "\n",
+    "The purpose is to have a simple notebook you can run on your setup to see what is what. Help you see if you can make some improvements. For example; Updating turbojpeg to 2.1 version if you are doing CPU decoding, or trying out GPU decoding etc etc (in my experience, Nvidia DALI gpu decoding is always faster)\n",
+    "\n",
+    "Let me know if you spot mistakes & or share your results in a gist."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +91,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "source": [
@@ -89,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +110,7 @@
      "text": [
       "/home/ceyda/.local/lib/python3.6/site-packages/torchvision/transforms/functional.py:165: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:180.)\n",
       "  img = torch.as_tensor(np.asarray(pic))\n",
-      "714 ms ± 18.6 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "692 ms ± 15.1 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,35 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip3 install --upgrade torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
-    "# currently getting an error on cuda 11\n",
-    "# ~/.local/lib/python3.6/site-packages/torchvision/io/image.py in decode_jpeg(input, mode, device)\n",
-    "#     174     device = torch.device(device)\n",
-    "#     175     if device.type == 'cuda':\n",
-    "# --> 176         output = torch.ops.image.decode_jpeg_cuda(input, mode.value, device)\n",
-    "#     177     else:\n",
-    "#     178         output = torch.ops.image.decode_jpeg(input, mode.value)\n",
-    "\n",
-    "# RuntimeError: nvjpegDecode failed: 5"
+    "# !pip3 install --upgrade torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "torchvision_version 0.10.0+cu102\n",
-      "True\n",
-      "10.2\n",
-      "10020 cuda compiled version\n"
+      "torchvision_version 0.10.0+cu102\nTrue\n10.2\n10020 cuda compiled version\n"
      ]
     }
    ],
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "538 ms ± 24.3 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "514 ms ± 20.9 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -190,20 +190,20 @@
     "    z=torch.from_numpy(img_bytes)\n",
     "#     z=z.to(\"cuda:0\")\n",
     "    z=decode_jpeg(z)\n",
-    "    # z=z.to(\"cuda:0\")\n",
+    "# z=z.to(\"cuda:0\")\n",
     "# Tensor output"
    ]
   },
   {
-   "source": [
-    "# Torchvision (GPU)"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Torchvision (GPU) (BETA)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -212,7 +212,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The slowest run took 6.68 times longer than the fastest. This could mean that an intermediate result is being cached.\n985 ms ± 414 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "913 ms ± 81.2 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -222,8 +222,19 @@
     "    z=torch.from_numpy(img_bytes)\n",
     "#     z=z.to(\"cuda:0\")\n",
     "    z=decode_jpeg(z, device='cuda')\n",
+    "    # torch.cuda.synchronize()\n",
     "#     z.to(\"cuda:0\")\n",
     "# Tensor output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !wget https://raw.githubusercontent.com/pytorch/pytorch/master/torch/utils/collect_env.py\n",
+    "# !python3 collect_env.py"
    ]
   },
   {
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "194 ms ± 9.67 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "195 ms ± 13.2 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "497 ms ± 41.4 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "487 ms ± 27.6 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -330,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -360,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "880 ms ± 18.7 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "880 ms ± 20.6 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "444 ms ± 12.3 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "442 ms ± 16.9 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -438,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,11 +458,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from turbojpeg import TurboJPEG\n",
+    "from turbojpeg import TurboJPEG,TJFLAG_FASTUPSAMPLE,TJFLAG_FASTDCT\n",
     "# specifying library path explicitly\n",
     "# jpeg = TurboJPEG('/usr/lib64/libturbojpeg.so')\n",
     "# using default library installation\n",
@@ -460,21 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "517 ms ± 16 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
+      "497 ms ± 16.7 ms per loop (mean ± std. dev. of 100 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -n 1 -r 100\n",
     "for img_bytes in images_bytes:\n",
-    "    z = jpeg.decode(img_bytes)\n",
+    "    # z = jpeg.decode(img_bytes)\n",
+    "    z = jpeg.decode(img_bytes,flags=TJFLAG_FASTUPSAMPLE|TJFLAG_FASTDCT) # with flags around -50ms faster\n",
     "    # z is decoded image\n",
     "    z = torch.as_tensor(z)\n",
     "    # z is Tensor on cpu"
@@ -492,7 +504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "py3",
+   "name": "python",
    "display_name": "Python 3.6.9 64-bit"
   },
   "language_info": {
